<resources>
    <string name="app_name">VegeFinder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_saved">Saved</string>
    <string name="profile_about">About</string>
    <string name="profile_log_out">Log Out</string>
    <string name="profile_follow_us">Follow Us</string>
    <string name="profile_history">History</string>
    <string name="profile_transaction">Transaction</string>
    <string name="about">To address the declining interest in farming among the younger generation, it is important that they receive the right education to generate their interest in engaging in the agricultural sector. In this endeavor, we would like to introduce VegeFinder, an innovative app specifically designed to motivate the younger generation to learn optimal farming techniques and encourage their involvement in the agricultural sector.</string>

    <!--    <string name="app_name">MyCamera</string>-->
</resources>