<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileActivity">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:background="?attr/colorSecondary"
        android:theme="@style/Theme.VegeFinder"
        app:layout_constraintTop_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp">


            <LinearLayout
                android:id="@+id/top_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_gravity="center"
                    android:contentDescription="profile_user"
                    android:src="@drawable/tomato"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="Tomatoman"
                    android:textAlignment="center"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="28dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/iv_profile"
                    app:layout_constraintTop_toTopOf="@+id/iv_profile" />

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="tomatomato@gmail.com"
                    android:textAlignment="center"
                    app:layout_constraintStart_toEndOf="@+id/iv_profile"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name" />
            </LinearLayout>


            <TextView
                android:id="@+id/tv_persona"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="26dp"
                android:layout_marginTop="30dp"
                android:text="Personalization"
                android:textColor="?android:textColorPrimary"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/top_wrapper" />

            <TextView
                android:id="@+id/tv_saved"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_marginStart="26dp"
                android:layout_marginTop="16dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:text="@string/profile_saved"
                android:textColor="?android:textColorPrimary"
                android:textSize="14sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/saved"
                app:drawableTint="#599344"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_persona" />

            <TextView
                android:id="@+id/tv_history"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="26dp"

                android:layout_marginTop="10dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:text="@string/profile_history"
                android:textColor="?android:textColorPrimary"
                android:textSize="14sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/clock_icon"
                app:drawableTint="#599344"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_saved" />

            <TextView
                android:id="@+id/tv_cart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="26dp"
                android:layout_marginTop="10dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:text="@string/profile_transaction"
                android:textColor="?android:textColorPrimary"
                android:textSize="14sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/store_icon"
                app:drawableTint="#599344"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_history" />

            <!--            <TextView-->
            <!--                android:id="@+id/tv_theme"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="0dp"-->
            <!--                android:layout_marginStart="26dp"-->
            <!--                android:layout_marginTop="10dp"-->
            <!--                android:drawableStart="@drawable/moon_icon"-->
            <!--                android:drawablePadding="8dp"-->
            <!--                android:drawableTint="#599344"-->
            <!--                android:text="Dark Mode"-->
            <!--                android:textColor="?android:textColorPrimary"-->
            <!--                android:textSize="14dp"-->
            <!--                android:textStyle="bold"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="@id/tv_history" />-->

            <!--            <androidx.appcompat.widget.SwitchCompat-->
            <!--                android:id="@+id/switch_mode"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:padding="16dp"-->
            <!--                app:layout_constraintBottom_toBottomOf="@+id/tv_history"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                app:layout_constraintTop_toTopOf="@+id/tv_history"-->
            <!--                tools:ignore="UseSwitchCompatOrMaterialXml" />-->


            <TextView
                android:id="@+id/tv_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/profile_about"
                android:textColor="?android:textColorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:drawableRightCompat="@drawable/right_icon_small"
                app:layout_constraintTop_toBottomOf="@+id/tv_cart" />


            <TextView
                android:id="@+id/tv_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/profile_log_out"
                android:textColor="?android:textColorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:drawableRightCompat="@drawable/right_icon_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_about" />

            <TextView
                android:id="@+id/tv_followus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="60dp"
                android:text="@string/profile_follow_us"
                android:textColor="?android:textColorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.456"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_logout" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_followus">

                <ImageButton
                    android:id="@+id/ib_instagram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="Instagram"
                    android:src="@drawable/instagram" />

                <ImageButton
                    android:id="@+id/ib_linkedin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="Linkedin"
                    android:src="@drawable/linkedin" />

                <ImageButton
                    android:id="@+id/ib_website"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="Website"
                    android:src="@drawable/website" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="?attr/colorSecondary"
        app:elevation="0dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/arrow_left_icon">


            </androidx.appcompat.widget.Toolbar>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Profile"
                android:textColor="?android:textColorPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <include
        android:id="@+id/loading_layout"
        layout="@layout/loading_layout"
        android:visibility="gone" />

</RelativeLayout>